fix: ~ fixing too long title in base menu entry causing ugly behaviour

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -20,6 +20,7 @@ $chips-spacing: 0.05em;
 $chips-list-height: 1em + 2*$spacing;
 
 /* shadows and borders */
+$border-width: 2px;
 $box-shadow-reg: 0px 0px 3px 0px rgba(0,0,0,0.05);
 $box-shadow-hov: 0px 1px 5px 0px rgba(0,0,0,0.15);
 $drop-shadow: 0px 10px 10px 0px rgba(0,0,0,0.25);
@@ -28,11 +29,11 @@ $pop-up-drop-shadow: 0px 10px 46px 0px rgba(0,0,0,0.25);
 $input-shadow: inset 0px 1px 4px 0px rgba(0,0,0,0.2);
 $preview-box-shadow: 0px 0px 16px 0px rgba(0,0,0,0.25);
 $box-transition: box-shadow 0.3s ease-in-out;
-$separation-line: 2px solid rgb(240, 240, 240);
+$separation-line: $border-width solid rgb(240, 240, 240);
 $list-border: 5px solid rgba(76, 175, 80, 1);
 $list-border-transparent-50: 5px solid rgba(76, 175, 80, 0.5);
 $list-border-transparent-100: 5px solid rgba(76, 175, 80, 0);
-$upload-border: 2px dashed rgb(111,111,111);
+$upload-border: $border-width dashed rgb(111,111,111);
 $input-field-border: 1px solid rgb(200, 200, 200);
 
 
